// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`askLambdaEndpoint given: [case1] successful invocation when: [t0] lambda returns valid response then: it should return parsed response 1`] = `
{
  "id": "user-123",
  "name": "Alice",
}
`;

exports[`askLambdaEndpoint given: [case2] lambda returns function error when: [t0] lambda response has FunctionError then: it should throw with error details 1`] = `
{
  "message": "LambdaEndpointError: User not found

{
  "endpoint": {
    "service": "svc-user",
    "access": "test",
    "function": "getUser",
    "slug": "svc-user-test-getUser"
  },
  "exid": "exid:[masked]",
  "errorType": "NotFoundError"
}",
  "metadata": {
    "endpoint": LambdaEndpoint {
      "access": "test",
      "function": "getUser",
      "service": "svc-user",
      "slug": "svc-user-test-getUser",
    },
    "errorType": "NotFoundError",
    "exid": "[masked]",
  },
}
`;

exports[`askLambdaEndpoint given: [case4] custom sdkLambda when: [t0] context provides sdkLambda then: it should use provided sdkLambda 1`] = `
{
  "custom": true,
}
`;

exports[`askLambdaEndpoint given: [case5] ancient payload format when: [t0] struct.payload is ancient then: it should send raw event without trail wrapper 1`] = `
{
  "payload": {
    "action": "test",
    "userId": "user-456",
  },
  "payloadFormat": "ancient",
}
`;

exports[`askLambdaEndpoint given: [case5] ancient payload format when: [t1] struct.payload is contemp (default) then: it should send wrapped event with trail 1`] = `
{
  "payload": {
    "event": {
      "action": "test",
      "userId": "user-789",
    },
    "trail": {
      "exid": "test-exid-contemp",
    },
  },
  "payloadFormat": "contemp",
}
`;

exports[`askLambdaEndpoint given: [case6] function name generation when: [t0] service and function provided then: it should generate correct function name 1`] = `
{
  "functionName": "svc-invoice-prod-createInvoice",
}
`;

exports[`askLambdaEndpoint given: [case7] lambda invocation failure paths when: [t0] lambda returns 404 (function not found) then: it should throw with actionable hint 1`] = `
{
  "message": "LambdaEndpointError: lambda invocation failed: function not found — verify service name, access level, and function name are correct

{
  "endpoint": {
    "service": "svc-absent",
    "access": "test",
    "function": "absentFn",
    "slug": "svc-absent-test-absentFn"
  },
  "exid": "exid:[masked]",
  "statusCode": 404
}",
  "metadata": {
    "endpoint": LambdaEndpoint {
      "access": "test",
      "function": "absentFn",
      "service": "svc-absent",
      "slug": "svc-absent-test-absentFn",
    },
    "exid": "[masked]",
    "statusCode": 404,
  },
}
`;

exports[`askLambdaEndpoint given: [case7] lambda invocation failure paths when: [t1] lambda returns 403 (access denied) then: it should throw with IAM permission hint 1`] = `
{
  "message": "LambdaEndpointError: lambda invocation failed: access denied — check iam permissions for lambda:InvokeFunction

{
  "endpoint": {
    "service": "svc-denied",
    "access": "test",
    "function": "deniedFn",
    "slug": "svc-denied-test-deniedFn"
  },
  "exid": "exid:[masked]",
  "statusCode": 403
}",
  "metadata": {
    "endpoint": LambdaEndpoint {
      "access": "test",
      "function": "deniedFn",
      "service": "svc-denied",
      "slug": "svc-denied-test-deniedFn",
    },
    "exid": "[masked]",
    "statusCode": 403,
  },
}
`;

exports[`askLambdaEndpoint given: [case7] lambda invocation failure paths when: [t2] lambda returns 429 (rate limited) then: it should throw with backoff hint 1`] = `
{
  "message": "LambdaEndpointError: lambda invocation failed: rate limit exceeded — implement backoff or request quota increase

{
  "endpoint": {
    "service": "svc-throttle",
    "access": "test",
    "function": "throttleFn",
    "slug": "svc-throttle-test-throttleFn"
  },
  "exid": "exid:[masked]",
  "statusCode": 429
}",
  "metadata": {
    "endpoint": LambdaEndpoint {
      "access": "test",
      "function": "throttleFn",
      "service": "svc-throttle",
      "slug": "svc-throttle-test-throttleFn",
    },
    "exid": "[masked]",
    "statusCode": 429,
  },
}
`;

exports[`askLambdaEndpoint given: [case7] lambda invocation failure paths when: [t3] lambda returns 500 (internal error) then: it should throw with cloudwatch hint 1`] = `
{
  "message": "LambdaEndpointError: lambda invocation failed: internal error — check lambda function logs in cloudwatch

{
  "endpoint": {
    "service": "svc-error",
    "access": "test",
    "function": "errorFn",
    "slug": "svc-error-test-errorFn"
  },
  "exid": "exid:[masked]",
  "statusCode": 500
}",
  "metadata": {
    "endpoint": LambdaEndpoint {
      "access": "test",
      "function": "errorFn",
      "service": "svc-error",
      "slug": "svc-error-test-errorFn",
    },
    "exid": "[masked]",
    "statusCode": 500,
  },
}
`;

exports[`askLambdaEndpoint given: [case7] lambda invocation failure paths when: [t4] lambda returns 504 (gateway timeout) then: it should throw with timeout hint 1`] = `
{
  "message": "LambdaEndpointError: lambda invocation failed: gateway timeout — lambda execution exceeded timeout

{
  "endpoint": {
    "service": "svc-timeout",
    "access": "test",
    "function": "timeoutFn",
    "slug": "svc-timeout-test-timeoutFn"
  },
  "exid": "exid:[masked]",
  "statusCode": 504
}",
  "metadata": {
    "endpoint": LambdaEndpoint {
      "access": "test",
      "function": "timeoutFn",
      "service": "svc-timeout",
      "slug": "svc-timeout-test-timeoutFn",
    },
    "exid": "[masked]",
    "statusCode": 504,
  },
}
`;
